--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.2.39",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.0"
     },
     "dependencies": {
         "nepo": "^1.0.1"
